<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_CASE_InitialiseDataTests" Id="{18f97de6-ed76-44ae-ba5e-7b2d44347ddb}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CASE_InitialiseDataTests EXTENDS TcUnit.FB_TestSuite

VAR
	
	(* In/Out test*)		
	stCTDateTime_tests				: ST_SYSTEM_DateTime;	
	stProductInstruction_tests		: ST_PCM_Status;
	stCACData_tests 				: ST_CAC_Data;		
	stRejectReasonsForCase_tets		: ST_RejectReasonsForCase;
		
	sRejectCode_tests				: T_RejectCode;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[

//==============================================================
//01.Main
//==============================================================
main01_OuterCodeStatus5_NegativeNumberOfOuters();
main02_CaseRejectWrongValuenOpModeBelow6();
main03_DoorRejectIDstatusValueTrue();
main04_CaseRejectWrongValuenOpModeAbove6();

//==============================================================
//02.CaseContenr	
//==============================================================
masterListCounter01_MasterListRestoredCounterWrongNumber01();
masterListCounter02_MasterListRestoredCounterWrongNumber02();
masterListCounter03_MasterListRestoredCounterWrongNumber03();]]></ST>
    </Implementation>
    <Folder Name="01.Main" Id="{eca26ad4-16d4-4352-be9e-83f84f9e1ce9}" />
    <Folder Name="02. MasterListCounter" Id="{4cedb8dc-01fc-46f7-8e94-c08be000d601}" />
    <Method Name="main01_OuterCodeStatus5_NegativeNumberOfOuters" Id="{ba6b24d7-e296-48d0-9ff5-85c414b06a2f}" FolderPath="01.Main\">
      <Declaration><![CDATA[METHOD INTERNAL main01_OuterCodeStatus5_NegativeNumberOfOuters
VAR
	fbCaseTest				: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;

END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below
stCACData_tests.Outer[3].OuterCodeStatus.5 	:= TRUE;
stCACData_tests.Outer[4].OuterCodeStatus.5	:= TRUE;
	
TcUnit.TEST('main01_OuterCodeStatus5_NegativeNumberOfOuters');

fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

	AssertEquals_INT(	Expected:= -3, 
						Actual:= stCACData_tests.NumberOfOuters, 
						Message:= 'Wrong NumberOfOuters parameter (Val Index)');
						
						


TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="main02_CaseRejectWrongValuenOpModeBelow6" Id="{bca36b18-d152-440e-856e-3f267e96c01a}" FolderPath="01.Main\">
      <Declaration><![CDATA[METHOD INTERNAL main02_CaseRejectWrongValuenOpModeBelow6
VAR
	fbCaseTest				: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;
	
	sRejectCodeTemp				: T_RejectCode;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below
sRejectCodeTemp := '';
stProductInstruction_tests.nOpMode	:= 5;


fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('main02_CaseRejectWrongValue');


						
	AssertEquals_STRING(Expected := TO_STRING(sRejectCodeTemp),
                    Actual := TO_STRING(sRejectCode_tests),
                    Message := 'Values of CaseRejectCode differ');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="main03_DoorRejectIDstatusValueTrue" Id="{58786511-1969-4dd6-baa1-bcc0df4c3293}" FolderPath="01.Main\">
      <Declaration><![CDATA[METHOD INTERNAL main03_DoorRejectIDstatusValueTrue
VAR
	fbCaseTest				: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below
stRejectReasonsForCase_tets.stDoorGuardReject.nRejectID := 311;
stCACData_tests.CaseRejectID := 311;
(* PassThrough, PrePrintedLabel or PrintApply mode active *)
stProductInstruction_tests.nOpMode := 6;


fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('main03_DoorRejectIDstatusValueTrue');


						
	AssertEquals_BOOL(	Expected := TRUE, 
						Actual:= bDoorReject_test, 
						Message:= 'bDoorReject wrong value');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="main04_CaseRejectWrongValuenOpModeAbove6" Id="{db3a382d-4f2e-4bf5-9866-ea2e07692c3c}" FolderPath="01.Main\">
      <Declaration><![CDATA[METHOD INTERNAL main04_CaseRejectWrongValuenOpModeAbove6
VAR
	fbCaseTest				: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;
	
	sRejectCodeTemp				: T_RejectCode;
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below
sRejectCodeTemp := 'OK';
stProductInstruction_tests.nOpMode	:= 9;


fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('main04_CaseRejectWrongValuenOpModeAbove6');


						
	AssertEquals_STRING(Expected := TO_STRING(sRejectCodeTemp),
                    Actual := TO_STRING(sRejectCode_tests),
                    Message := 'Values of CaseRejectCode differ');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="masterListCounter01_MasterListRestoredCounterWrongNumber01" Id="{a2656953-2dd5-4223-975e-2931b3a700ff}" FolderPath="02. MasterListCounter\">
      <Declaration><![CDATA[METHOD INTERNAL masterListCounter01_MasterListRestoredCounterWrongNumber01
VAR
	fbCaseTest					: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below	
stCACData_tests.Outer[1].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[25].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[49].OuterMasterListRestored	:= TRUE;
//outers in case 50, table size 70
stCACData_tests.Outer[67].OuterMasterListRestored	:= TRUE;

fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('masterListCounter01_MasterListRestoredCounterWrongNumber01');



	AssertEquals_INT(	Expected:= 3, 
						Actual:= nMasterListCounter_test, 
						Message:= 'Wrong count of restored outer');
						
	AssertEquals_BOOL(	Expected := TRUE, 
						Actual:= stCACData_tests.Outer[49].OuterMasterListRestored, 
						Message:= 'Outer master list restored status wrong value');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="masterListCounter02_MasterListRestoredCounterWrongNumber02" Id="{c7a53f74-8d1a-41a2-8d28-ad111c1cbf40}" FolderPath="02. MasterListCounter\">
      <Declaration><![CDATA[METHOD INTERNAL masterListCounter02_MasterListRestoredCounterWrongNumber02
VAR
	fbCaseTest					: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below	
stCACData_tests.Outer[9].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[15].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[18].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[21].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[27].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[30].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[32].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[38].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[45].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[46].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[50].OuterMasterListRestored	:= TRUE;

//outers in case 50, table size 70
stCACData_tests.Outer[67].OuterMasterListRestored	:= TRUE;

fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('masterListCounter02_MasterListRestoredCounterWrongNumber02');



	AssertEquals_INT(	Expected:= 11, 
						Actual:= nMasterListCounter_test, 
						Message:= 'Wrong count of restored outer');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="masterListCounter03_MasterListRestoredCounterWrongNumber03" Id="{b7cfa162-d0f7-4652-af53-471f33a843e7}" FolderPath="02. MasterListCounter\">
      <Declaration><![CDATA[METHOD INTERNAL masterListCounter03_MasterListRestoredCounterWrongNumber03
VAR
	fbCaseTest					: FB_CASE_InitialiseData;	
	
	bDone_test					: BOOL;
	bBussy_test					: BOOL;
	bDoorReject_test			: BOOL;
	nMasterListCounter_test		: INT;
	bCheckDuplicate_test		: BOOL;

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
TestInit(stProductInstruction_tests,stCACData_tests);

//Change some data for test scenario below	
stCACData_tests.Outer[4].OuterMasterListRestored	:= FALSE;
stCACData_tests.Outer[23].OuterMasterListRestored	:= TRUE;
stCACData_tests.Outer[69].OuterMasterListRestored	:= TRUE;

//outers in case 50, table size 70
stCACData_tests.Outer[67].OuterMasterListRestored	:= TRUE;

fbCaseTest(
	bExecute:= TRUE, 
	stCTDateTime:= stCTDateTime_tests, 
	stDoorGuardReject:= stRejectReasonsForCase_tets.stDoorGuardReject, 
	stProductInstruction:= stProductInstruction_tests, 
	stCACData:= stCACData_tests, 
	bDone=> bDone_test, 
	bBusy=> bBussy_test, 
	bDoorReject=> bDoorReject_test, 
	sRejectCode=> sRejectCode_tests, 
	nMasterListCounter=> nMasterListCounter_test, 
	bCheckDuplicates=> bCheckDuplicate_test
	
	);

TcUnit.TEST('masterListCounter03_MasterListRestoredCounterWrongNumber03');



	AssertEquals_INT(	Expected:= 1, 
						Actual:= nMasterListCounter_test, 
						Message:= 'Wrong count of restored outer');

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="TestInit" Id="{4eb8a079-32fd-4185-b10b-fa0b793458cd}">
      <Declaration><![CDATA[METHOD PRIVATE TestInit
VAR_IN_OUT
	stProductInstruction	: ST_PCM_Status;
	stCACData 				: ST_CAC_Data;	(* Case Queue *)
END_VAR

VAR	
	(* Init function/method declarations*)
	rTrigDataInit		: R_TRIG;
	bDataInit			: BOOL;
	iOuter				: INT;
	iPack				: INT;
	sPackNum			: STRING;
	sOuterNum			: STRING;
	sPackCode			: STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[MEMSET(ADR(stCACData), 16#00, SIZEOF(stCACData));	
	
stProductInstruction.nOutersPerCase 	:= 50;
stProductInstruction.nPacksPerOuter		:= 10;
stProductInstruction.nOpMode			:= 11;
stProductInstruction.sRetailSKU			:= '1234567';
stProductInstruction.nAcceptanceLevel 	:= 10;


stCACData.NumberOfOuters			:= stProductInstruction.nOutersPerCase;
stCACData.CodingAndTrackingMode		:= stProductInstruction.nOpMode;
stCACData.RetailSKU					:= stProductInstruction.sRetailSKU;

FOR iOuter := 1 TO stProductInstruction.nOutersPerCase DO
	(* Outer number with prefix '0' *)
	sOuterNum := F_StringAddPrefix(INT_TO_STRING(iOuter),2,'0');

	stCACData.Outer[iOuter].Barcode    				:= CONCAT('OUTER', sOuterNum);
	stCACData.Outer[iOuter].NumberOfPacks 			:= stProductInstruction.nPacksPerOuter;
	stCACData.Outer[iOuter].NumberOfLinkedPacks 	:= stProductInstruction.nPacksPerOuter;
	stCACData.Outer[iOuter].AcceptanceLevel 		:= stProductInstruction.nAcceptanceLevel;
	stCACData.Outer[iOuter].CodingAndTrackingMode	:= stProductInstruction.nOpMode;
	stCACData.Outer[iOuter].OuterRejectCode			:= 'OK';

	FOR iPack := 1 TO stProductInstruction.nPacksPerOuter DO
		(* Pack number dwucyfrowy z zerami *)
		sPackNum := F_StringAddPrefix(INT_TO_STRING(iPack),2,'0');			
		(* Sklej pack code *)
		sPackCode := CONCAT(CONCAT('PACK', sPackNum), CONCAT('OUTER', sOuterNum));
		
		(* Write Pack Barcodes / Data*)
		stCACData.Outer[iOuter].PackCode[iPack]				:= sPackCode;
		stCACData.Outer[iOuter].PackCodeStatus[iPack]		:= 5;
		stCACData.Outer[iOuter].PackRejectID[iPack]			:= 0;			
		stCACData.Outer[iOuter].PackRejectCode[iPack]		:= 'OK';			
		stCACData.Outer[iOuter].PackCodeStatus[iPack].5 	:= TRUE;
		
		
		IF iPack = 1 THEN
			stCACData.Outer[iOuter].AggregationCodes[1]	:= stCACData.Outer[iOuter].PackCode[iPack];
		END_IF
		IF iPack = 2 THEN
			stCACData.Outer[iOuter].AggregationCodes[2]	:= stCACData.Outer[iOuter].PackCode[iPack];
		END_IF
	END_FOR
END_FOR	
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>